# aq2_qrisproject

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.json  config.py  contribution_analysis.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_a2_bond_weights.py  run_a2_gov10.py  run_a2_iso_direction.py  run_benchmark.py  run_copper.py  run_dca.py  run_exposure.py  run_holdings.py  run_regime.py  run_rolling_export.py  run_segments.py  run_turnover.py  run_universe37.py  run_v2.py  run_v2_2026_attrib.py  run_v3.py  run_walkforward.py
analysis/: __init__.py  benchmark.py  cashflow.py  dca.py  drawdown_report.py  exposure.py  exposure_report.py  fonts.py  frozen.py  holdings.py  irr.py  regime.py  regime_report.py  report.py  report_base.py  rolling.py  rolling_report.py  rolling_returns.py  segment_report.py  segments.py  turnover.py  turnover_report.py
backtest/: __init__.py  engine.py  result.py  trade.py
config/: irp.json  portfolio.json  satellite.json
dashboard/: .env.example  index.html  nginx.conf  package.json
data/: __init__.py  integrity.py  loader.py  yfinance_loader.py
doc/: .~lock.KDT_AI퀀트_인디케이터_발표자료.pptx#  KDT_AI퀀트_인디케이터_발표자료.pptx  간이투자설명서_헬름IRP세븐서티액티브.md  발표대본.md  발표대본_헬름IRP세븐서티액티브.md  투자설명서_헬름IRP세븐서티액티브.md  투자제안서_v1.1.md  투자제안서_v1.2.md  투자제안서_v1.3.md  헬름_IRP세븐서티액티브_발표자료.pptx
docs/: architecture.md  backtest_methodology.md  copper_inclusion_test.md  data_dictionary.md  factor_methodology.md  limitations.md  proposal_v0.2.md  universe_methodology.md  v3_battery_results.md  verification_log.md  walkforward_oos.md  기술분석_상세.md  작업보고_2026-07-15_16.md
indicator/: adx.py  (+6 more)
(+283 files in other folders)
